--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -15,5 +15,18 @@
     <string name="logo">Logo</string>
     <string name="number">Number</string>
     <string name="sort_by">Sort by:</string>
+    <string name="about">About</string>
+    <string name="weight">Weight</string>
+    <string name="height">Height</string>
+    <string name="moves">Moves</string>
+    <string name="base_stats">Base Stats</string>
+    <string name="hp">HP</string>
+    <string name="atk">ATK</string>
+    <string name="def">DEF</string>
+    <string name="sdef">SDEF</string>
+    <string name="spd">SPD</string>
+    <string name="base_stat">0%1$d</string>
+    <string name="weight_stat">%1$.1f kg</string>
+    <string name="height_stat">%1$.1f m</string>
 
 </resources>
